--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,244 +1,247 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
-	font-family: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-	background-color: #19191d !important;
-	font-weight: 300 !important;
-  }
-  
-  p {
-	color: #b3b3b3;
-	font-weight: 300;
-  }
-  
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6,
-  .h1,
-  .h2,
-  .h3,
-  .h4,
-  .h5,
-  .h6 {
-	font-family: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  }
-  
-  a {
-	-webkit-transition: .3s all ease;
-	-o-transition: .3s all ease;
-	transition: .3s all ease;
-  }
-  
-  a,
-  a:hover {
-	text-decoration: none !important;
-  }
-  
-  .content {
-	padding: 7rem 0;
-  }
-  
-  h2 {
-	font-size: 20px;
-	color: #fff;
-  }
-  
-  .custom-table {
-	min-width: 900px;
-  }
-  
-  .custom-table thead tr,
-  .custom-table thead th {
-	border-top: none;
-	border-bottom: none !important;
-	color: #fff;
-  }
-  
-  .custom-table tbody th,
-  .custom-table tbody td {
-	color: #777;
-	font-weight: 400;
-	padding-bottom: 20px;
-	padding-top: 20px;
-	font-weight: 300;
-  }
-  
-  .custom-table tbody th small,
-  .custom-table tbody td small {
-	color: #b3b3b3;
-	font-weight: 300;
-  }
-  
-  .custom-table tbody tr:not(.spacer) {
-	border-radius: 7px;
-	overflow: hidden;
-	-webkit-transition: .3s all ease;
-	-o-transition: .3s all ease;
-	transition: .3s all ease;
-  }
-  
-  .custom-table tbody tr:not(.spacer):hover {
-	-webkit-box-shadow: 0 2px 10px -5px rgba(0, 0, 0, 0.1);
-	box-shadow: 0 2px 10px -5px rgba(0, 0, 0, 0.1);
-  }
-  
-  .custom-table tbody tr th,
-  .custom-table tbody tr td {
-	background: #25252b;
-	border: none;
-	-webkit-transition: .3s all ease;
-	-o-transition: .3s all ease;
-	transition: .3s all ease;
-  }
-  
-  .custom-table tbody tr th a,
-  .custom-table tbody tr td a {
-	color: #b3b3b3;
-  }
-  
-  .custom-table tbody tr th:first-child,
-  .custom-table tbody tr td:first-child {
-	border-top-left-radius: 0px;
-	border-bottom-left-radius: 0px;
-  }
-  
-  .custom-table tbody tr th:last-child,
-  .custom-table tbody tr td:last-child {
-	border-top-right-radius: 0px;
-	border-bottom-right-radius: 0px;
-  }
-  
-  .custom-table tbody tr.spacer td {
-	padding: 0 !important;
-	height: 3px;
-	border-radius: 0 !important;
-	background: transparent !important;
-  }
-  
-  .custom-table tbody tr.active th,
-  .custom-table tbody tr.active td,
-  .custom-table tbody tr:hover th,
-  .custom-table tbody tr:hover td {
-	color: #fff;
-	background: #2e2e36;
-  }
-  
-  .custom-table tbody tr.active th a,
-  .custom-table tbody tr.active td a,
-  .custom-table tbody tr:hover th a,
-  .custom-table tbody tr:hover td a {
-	color: #fff;
-  }
-  
-  /* Custom Checkbox */
-  .control {
-	display: block;
-	position: relative;
-	margin-bottom: 25px;
-	cursor: pointer;
-	font-size: 18px;
-  }
-  
-  .control input {
-	position: absolute;
-	z-index: -1;
-	opacity: 0;
-  }
-  
-  .control__indicator {
-	position: absolute;
-	top: 2px;
-	left: 0;
-	height: 20px;
-	width: 20px;
-	border-radius: 4px;
-	border: 2px solid #3f3f47;
-	background: transparent;
-  }
-  
-  .control--radio .control__indicator {
-	border-radius: 50%;
-  }
-  
-  .control:hover input~.control__indicator,
-  .control input:focus~.control__indicator {
-	border: 2px solid #007bff;
-  }
-  
-  
-  .control__indicator:after {
-	font-family: 'icomoon';
-	content: '\e5ca';
-	position: absolute;
-	display: none;
-  }
-  
-  
-  /* for dark controls override */
-  
-  input {
-	background: #2e2e36 !important;
-	caret-color: #b3b3b3 !important;
-	color: #b3b3b3 !important;
-	border: 1px solid #2e2e36;
-	padding: 8px;
-	border-radius: 5px;
-  }
-  
-  textarea {
-	background: #2e2e36;
-	caret-color: #b3b3b3;
-	border: 1px solid #2e2e36;
-  }
-  
-  input:focus {
-	color: #b3b3b3 !important;
-	background: #2e2e36 !important;
-	border: 1px solid #2e2e36 !important;
-  }
-  
-  textarea:focus {
-	color: #b3b3b3 !important;
-	background: #2e2e36 !important;
-	border: 1px solid #2e2e36 !important;
-  }
-  
-  input::placeholder {
-	color: #b3b3b3 !important;
-  }
-  
-  textarea::placeholder {
-	color: #b3b3b3 !important;
-	/* font-weight: 500; */
-  }
-  
-  textarea:focus,
-  textarea.form-control:focus,
-  input.form-control:focus,
-  input[type=text]:focus,
-  input[type=password]:focus,
-  input[type=email]:focus,
-  input[type=number]:focus,
-  [type=text].form-control:focus,
-  [type=password].form-control:focus,
-  [type=email].form-control:focus,
-  [type=tel].form-control:focus,
-  [contenteditable].form-control:focus {
-	/* box-shadow: inset 0 -1px 0 #ddd; */
-	outline: none;
-	border: none;
-  }
-  
-  .container h2 {
-	border-bottom: 1px solid #3e3e44b5;
-	padding-bottom: 13px;
-	text-align: center;
-  }
-  
-  form {
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-	flex-direction: row;
-  }
+  font-family: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
+    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  background-color: #19191d !important;
+  font-weight: 300 !important;
+}
+
+p {
+  color: #b3b3b3;
+  font-weight: 300;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+.h1,
+.h2,
+.h3,
+.h4,
+.h5,
+.h6 {
+  font-family: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
+    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
+
+a {
+  -webkit-transition: 0.3s all ease;
+  -o-transition: 0.3s all ease;
+  transition: 0.3s all ease;
+}
+
+a,
+a:hover {
+  text-decoration: none !important;
+}
+
+.content {
+  padding: 7rem 0;
+}
+
+h2 {
+  font-size: 20px;
+  color: #fff;
+}
+
+.custom-table {
+  min-width: 900px;
+}
+
+.custom-table thead tr,
+.custom-table thead th {
+  border-top: none;
+  border-bottom: none !important;
+  color: #fff;
+}
+
+.custom-table tbody th,
+.custom-table tbody td {
+  color: #777;
+  font-weight: 400;
+  padding-bottom: 20px;
+  padding-top: 20px;
+  font-weight: 300;
+}
+
+.custom-table tbody th small,
+.custom-table tbody td small {
+  color: #b3b3b3;
+  font-weight: 300;
+}
+
+.custom-table tbody tr:not(.spacer) {
+  border-radius: 7px;
+  overflow: hidden;
+  -webkit-transition: 0.3s all ease;
+  -o-transition: 0.3s all ease;
+  transition: 0.3s all ease;
+}
+
+.custom-table tbody tr:not(.spacer):hover {
+  -webkit-box-shadow: 0 2px 10px -5px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 10px -5px rgba(0, 0, 0, 0.1);
+}
+
+.custom-table tbody tr th,
+.custom-table tbody tr td {
+  background: #25252b;
+  border: none;
+  -webkit-transition: 0.3s all ease;
+  -o-transition: 0.3s all ease;
+  transition: 0.3s all ease;
+}
+
+.custom-table tbody tr th a,
+.custom-table tbody tr td a {
+  color: #b3b3b3;
+}
+
+.custom-table tbody tr th:first-child,
+.custom-table tbody tr td:first-child {
+  border-top-left-radius: 0px;
+  border-bottom-left-radius: 0px;
+}
+
+.custom-table tbody tr th:last-child,
+.custom-table tbody tr td:last-child {
+  border-top-right-radius: 0px;
+  border-bottom-right-radius: 0px;
+}
+
+.custom-table tbody tr.spacer td {
+  padding: 0 !important;
+  height: 3px;
+  border-radius: 0 !important;
+  background: transparent !important;
+}
+
+.custom-table tbody tr.active th,
+.custom-table tbody tr.active td,
+.custom-table tbody tr:hover th,
+.custom-table tbody tr:hover td {
+  color: #fff;
+  background: #2e2e36;
+}
+
+.custom-table tbody tr.active th a,
+.custom-table tbody tr.active td a,
+.custom-table tbody tr:hover th a,
+.custom-table tbody tr:hover td a {
+  color: #fff;
+}
+
+.control {
+  display: block;
+  position: relative;
+  margin-bottom: 25px;
+  cursor: pointer;
+  font-size: 18px;
+}
+
+.control input {
+  position: absolute;
+  z-index: -1;
+  opacity: 0;
+}
+
+.control__indicator {
+  position: absolute;
+  top: 2px;
+  left: 0;
+  height: 20px;
+  width: 20px;
+  border-radius: 4px;
+  border: 2px solid #3f3f47;
+  background: transparent;
+}
+
+.control--radio .control__indicator {
+  border-radius: 50%;
+}
+
+.control:hover input ~ .control__indicator,
+.control input:focus ~ .control__indicator {
+  border: 2px solid #007bff;
+}
+
+.control__indicator:after {
+  font-family: "icomoon";
+  content: "\e5ca";
+  position: absolute;
+  display: none;
+}
+
+input {
+  background: #2e2e36 !important;
+  caret-color: #b3b3b3 !important;
+  color: #b3b3b3 !important;
+  border: 1px solid #2e2e36;
+  padding: 8px;
+  border-radius: 5px;
+}
+
+textarea {
+  background: #2e2e36;
+  caret-color: #b3b3b3;
+  border: 1px solid #2e2e36;
+}
+
+input:focus {
+  color: #b3b3b3 !important;
+  background: #2e2e36 !important;
+  border: 1px solid #2e2e36 !important;
+}
+
+textarea:focus {
+  color: #b3b3b3 !important;
+  background: #2e2e36 !important;
+  border: 1px solid #2e2e36 !important;
+}
+
+input::placeholder {
+  color: #b3b3b3 !important;
+}
+
+textarea::placeholder {
+  color: #b3b3b3 !important;
+  /* font-weight: 500; */
+}
+
+textarea:focus,
+textarea.form-control:focus,
+input.form-control:focus,
+input[type="text"]:focus,
+input[type="password"]:focus,
+input[type="email"]:focus,
+input[type="number"]:focus,
+[type="text"].form-control:focus,
+[type="password"].form-control:focus,
+[type="email"].form-control:focus,
+[type="tel"].form-control:focus,
+[contenteditable].form-control:focus {
+  /* box-shadow: inset 0 -1px 0 #ddd; */
+  outline: none;
+  border: none;
+}
+
+.container h2 {
+  border-bottom: 1px solid #3e3e44b5;
+  padding-bottom: 13px;
+  text-align: center;
+}
+
+form {
+  display: flex;
+  /* align-items: center; */
+  /* justify-content: space-between; */
+  flex-direction: row;
+}
